gcc/testsuite/rust/rustc/ui/no_crate_type.rs
// regression test for issue 11256
#![crate_type]  // { dg-error "" "" { target *-*-* } }

fn main() {
    return
}

